# amanda

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  azure-pipelines.yml  build.py  environment.yml  environment_py36.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
cc/: CMakeLists.txt
cc/intercepts/: CMakeLists.txt  amanda_intercepts_pybind.cpp
cc/pytorch/: CMakeLists.txt  amanda_torch_pybind.cpp  function_pre_hook.cpp  listener.cpp  tensor_id.cpp
cc/tensorflow/: CMakeLists.txt  amanda_tf_pybind.cpp
cc/tensorflow/kernels/: py_hook.cc
cc/tensorflow/ops/: store_tensor_to_file.cc
cc/tensorflow/py_hook/: py_hook.cc  py_hook_op.cc
cc/tensorflow/store_tensor_to_file/kernels/: store_tensor_to_file_kernels.cc
cc/tensorflow/store_tensor_to_file/ops/: store_tensor_to_file_ops.cc
cmake/modules/: FindTensorFlow.cmake
docs/: README-v0.1.md  design.md  namespace.md  rationale.md
examples/apex/: .gitignore  setup.py
src/amanda/: __init__.py  adapter.py  attributes.py  cache.py  cli.py  event.py  exception.py  graph.py  import_hook.py  intercepts.py  lang.py  mapping.py  marker.py  matcher.py  namespace.py  rule.py  threading.py  tool.py  type.py
src/amanda/cli/: download.py  download_model.py  main.py  run.py  tensorflow_extractor.py  utils.py
src/amanda/conversion/: checkpoint.py  mmdnn.py  onnx.py  pytorch.py  pytorch_updater.py  tensorflow.py  tensorflow_updater.py  tf.py  utils.py
src/amanda/conversion/listener/: CMakeLists.txt  README.md  amanda_pybind.cpp  function_pre_hook.cpp  hook.py  listener.cpp  listener_pybind.cpp
src/amanda/core/: graph.py
src/amanda/io/: __init__.py  file.py  graph.proto  graph_pb2.py  graph_pb2.pyi  proto.py  serde.py  text.py  value.proto  value_pb2.py  value_pb2.pyi
src/amanda/models/tf/: inception_resnet_v2.py  nasnet_utils.py
src/amanda/profiler/: metrics.py  utils.py
src/amanda/profiler/counter/: CMakeLists.txt  Makefile  __init__.py  autorange_counter.cpp  autorange_test.cpp  bind.sh  counter.cpp  counter.h  counter_pybind.cpp  counter_pybind_test.py  extensions.cpp  extensions.h  metrics.sh  range_counter.cpp  set_metrics.cpp
src/amanda/profiler/counter/test/: CMakeLists.txt  Makefile  autorange_test.cpp  kernel.cu  kernel.cuh  metrics.sh  metrics_record.txt
src/amanda/profiler/pytorch/: __init__.py  amanda_counter.py  amanda_profiler.py  amanda_tracer.py  counter_example.py  kernelInfo_test.py  kernelRoofline_test.py  metrics.py  opInfo_test.py  profiler.py  torchMetrics.py  tracer_example.py  utils.py
src/amanda/profiler/tensorflow/: __init__.py  amanda_counter.py  amanda_profiler.py  amanda_tracer.py  counter_example.py  kernelInfo_test.py  opInfo_test.py  profiler.py  tfMetrics.py  tracer_example.py
src/amanda/profiler/tracer/: CMakeLists.txt  __init__.py  activity_trace_async.cpp  activity_trace_test.cpp  bind.sh  kernel.cu  kernel.cuh  kind_enable.h  tracer.cpp  tracer.h  tracer_pybind.cpp  tracer_pybind_test.py
src/amanda/profiler/tracer/test/: CMakeLists.txt  Makefile  activity_trace_test.cpp  kernel.cu
src/amanda/tests/: conftest.py  download_model.py  lenet.py  lenet_pytorch.py  partition-graphs-0.pbtxt  placer_input_1.pbtxt  test_cli.py  test_debugging.py  test_graph.py  test_import_hook.py  test_intercepts.py  test_lang.py  test_mmdnn_import_export.py  test_namespace.py  test_onnx_import_export.py  test_op.py  test_pytorch_backward_event.py  test_pytorch_import_export.py  test_pytorch_pybind.py  test_tf_import_export.py  test_tflite_import_export.py  utils.py
src/amanda/tools/: __init__.py  eager_context.py  filter_op.py  mapping.py
src/amanda/tools/debugging/: debugging_rules.yaml  dtype.py  example_rules.py  example_rules.yaml  graph.py  insert_debug_op.py  insert_debug_op_adhoc.py  insert_debug_op_adhoc_pytorch.py  insert_debug_op_adhoc_tensorflow.py  insert_debug_op_adhoc_v2.py  insert_debug_op_adhoc_v3.py  insert_debug_op_adhoc_v4.py  insert_debug_op_adhoc_v5.py  insert_debug_op_pytorch.py  insert_debug_op_tensorflow.py  modify_graph.py  modify_graph.yaml  register.py  rule_schema.yaml  tables.yaml  tables_for_batchnorm.yaml  tables_schema.json  update_tables.py  validator.py
src/amanda/tools/path/: extraction.py  instrumentation.py  tables.yaml
src/amanda/tools/pruning/: asp.py  asp_pruning.py  model.py  pruning.py  pruning_tool.py  sparse_masklib.py
src/examples/: __init__.py  pyproject.toml
src/examples/anomaly_detection/tensorflow/: reproduce.py
src/examples/common/tensorflow/: utils.py
src/examples/count_op/pytorch/: count_op.py
src/examples/effective_path/: graph.py  test_pytorch_graph_trace.py  trace_tool.py  utils.py
src/examples/effective_path/pytorch/: graph_trace_example.py  test_pytorch_graph_trace.py  trace_tool.py
src/examples/effective_path/tensorflow/: __init__.py  effective_path_example.py  effective_path_tool.py  path_extraction.py  test_effective_path.py
src/examples/error_injection/: injection_example.py  injection_tool.py  test_pytorch_error_injection.py
src/examples/error_injection/pytorch/: injection_example.py
src/examples/flops_profiler/mapping/: tf_example.py  tf_rule.py  tool.py  torch_example.py  torch_rule.py
src/examples/flops_profiler/pytorch/: flops_profiler.py  (+2 more)
src/examples/gcn/: test.py  trace.py
src/examples/notebooks/: conv_counter.ipynb
src/examples/pruning/: pruning.py  pruning_amanda.py  pruning_amanda_v2.py  pruning_apex.py  pruning_pytorch.py  pruning_test.py  pruning_treelstm.py  vector_wise_sparsity.py
src/examples/qat/: vector_wise_sparsity.py
src/examples/utils/: timer.py
src/mmx/: __init__.py  cli.py  exception.py  exporter.py  graph.py  importer.py  namespace.py  rule.py
src/mmx/conversion/: mmdnn.py  tensorflow.py
src/mmx/core/: __init__.py  graph.py
src/mmx/tests/: conftest.py  test_cli.py  test_graph.py  test_importer.py  test_importer_exporter.py  test_mmdnn_import_export.py  test_op.py  test_tf_import_export.py  utils.py
test_data/: tensorflow_inception_resnet_v2_converted.json  tensorflow_inception_resnet_v2_converted.pb
(+109 files in other folders)
